--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -11,6 +11,7 @@ dataSources:
     source:
       address: "0xc3c11102abdbb97ee29cd1a6dc2ed8d7c7093b20"
       abi: CampaignFactoryUpgradable
+      startBlock: 27618720
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
