--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -11,7 +11,7 @@ dataSources:
     source:
       address: "0xE44C3974E7a8659b37fb2959a9Ea91560498Aac3"
       abi: CampaignFactoryUpgradable
-      startBlock: 29048925
+      startBlock: 29153634
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -66,4 +66,8 @@ templates:
           handler: handleWithDraw
         - event: EvCampaignUriSet(string)
           handler: handleCampaignUriSet
+        - event: EvChallenge(uint256,uint256,uint256)
+          handler: handleChallenge
+        - event: EvVote(uint256,uint256)
+          handler: handleVote
       file: ./src/campaign.ts
